jpetstore-deployment-with-jvm-heuristics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jpetstore
spec:
  selector:
    matchLabels:
      app: jpetstore
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        app: jpetstore
    spec:
      imagePullSecrets:
      - name: my-registry-secret
      containers:
      - name: jpetstore
        image: 192.168.1.122:5200/my-jpetstore:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi" # Requests 256 Mebibytes of memory
            cpu: "1"    # Requests 0.25 CPU cores (250 millicores)
          limits:
            memory: "2Gi" # Limits memory usage to 512 Mebibytes
            cpu: "4"    # Limits CPU usage to 0.5 CPU cores (500 millicores)
