jpetstore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jpetstore
spec:
  selector:
    matchLabels:
      app: jpetstore
  template:
    metadata:
      labels:
        app: jpetstore
    spec:
      containers:
      - name: jpetstore
        image: 192.168.49.1:5000/my-jpetstore:latest
        ports:
        - containerPort: 8080
