jpetstore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jpetstore-service
spec:
  type: LoadBalancer
  selector:
    app: jpetstore
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      #nodePort: 8080
