nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-service
spec:
  type: LoadBalancer
  selector:
    app: nginx-proxy
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
